--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -85,7 +85,6 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/operadorActual"
-            android:textColor="#000000"
             android:textSize="24sp" />
 
         <EditText
@@ -120,7 +119,7 @@
 
     <TableLayout
         android:id="@+id/tableLayoutResultados"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
